--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="stylesheet" href="\style.css">
+ <link rel="stylesheet" href="/style.css">
   <link rel="stylesheet" href="https://github.com/tempalfaj/mhtcet.github.io/blob/dbf2ff3f95f3cc8b6848d8996a73f11f06b5dbb7/style.css">
  
- <script src="\script.js"></script>
+ <script src="/script.js"></script>
  <script src=" https://github.com/tempalfaj/mhtcet.github.io/blob/dbf2ff3f95f3cc8b6848d8996a73f11f06b5dbb7/script.js"></script>
 </head>
 
