--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
              <tr>
                     <td>RIT</td>
                     <td>Sangli</td>
-                    <td>CIVIL/td>
+                    <td>CIVIL</td>
                     <td>ST</td>
                     <td>95-100</td>
                 </tr>
