--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
              <tr>
                     <td>RIT</td>
                     <td>Sangli</td>
-                    <td>SC</td>
-                    <td>Open</td>
+                    <td>CSE</td>
+                    <td>Sc</td>
                     <td>95-100</td>
                 </tr>
              <tr>
