--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <option value="all"></option>
                     </select>
                 </th>
-                <th col-index = 5>Percentile
+                <th col-index = 5>My Percentile
                     <select class="table-filter" onchange="filter_rows()">
                         <option value="all"></option>
                     </select>
